--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "prebuild": "rimraf dist",
     "build": "NODE_ENV=production nest build && cd src/client && next build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "nest start",
+    "start": "NODE_ENV=production nest start",
     "start:dev": "NODE_ENV=development nest start --watch --preserveWatchOutput",
     "start:debug": "nest start --debug --watch --preserveWatchOutput",
     "start:prod": "NODE_ENV=production node dist/src/server/main",
@@ -24,23 +24,30 @@
     "typeorm": "typeorm-ts-node-commonjs -d ormconfig.ts",
     "client:generate:schema": "zeus src/schema.gql src/client/app/types --typescript --apollo",
     "cy": "cypress",
-    "scaffold": "cd node_modules/@web/scaffold & cross-env NODE_ENV=production nest start"
+    "scaffold": "cd node_modules/@web/scaffold & cross-env NODE_ENV=production nest start",
+    "f-build": "cd ./src/client && next build",
+    "f-start": "cd ./src/client && next start"
   },
   "dependencies": {
     "@apollo/client": "^3.11.8",
     "@apollo/gateway": "^2.4.12",
+    "@apollo/server": "^4.11.0",
     "@babel/runtime": "^7.25.9",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.13.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.32",
+    "@fortawesome/free-brands-svg-icons": "^5.15.1",
+    "@fortawesome/free-solid-svg-icons": "^5.15.1",
+    "@fortawesome/react-fontawesome": "^0.1.14",
     "@mui/icons-material": "5.16.7",
     "@mui/lab": "^5.0.0-alpha.173",
     "@mui/material": "^5.16.7",
     "@mui/x-date-pickers": "^7.3.2",
-    "@nestjs/apollo": "12.2.0",
+    "@nestjs/apollo": "^12.2.1",
     "@nestjs/common": "^10.3.8",
     "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^10.4.5",
-    "@nestjs/graphql": "12.2.0",
+    "@nestjs/graphql": "12.2.1",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.4.4",
@@ -49,15 +56,20 @@
     "@preact/signals-react": "^2.2.0",
     "apollo-server-express": "^3.11.1",
     "axios": "^1.7.7",
+    "bcrypt": "^5.1.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "commander": "^11.0.0",
     "cookie-parser": "^1.4.6",
+    "core-js": "3.30.1",
     "dayjs": "^1.11.13",
     "easy-peasy": "^6.0.5",
     "formik": "^2.2.9",
     "google-auth-library": "^8.7.0",
+    "graphql": "^16.9.0",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
-    "graphql": "^16.9.0",
+    "moment": "^2.27.0",
     "nestjs-console": "9.0.0",
     "next": "14.2.3",
     "next-auth": "^4.24.8",
@@ -70,13 +82,25 @@
     "react": "^18.1.0",
     "react-content-loader": "7.0.0",
     "react-dom": "^18.1.0",
+    "react-image": "^4.0.3",
+    "react-router": "^5.2.1",
+    "react-router-dom": "^5.3.0",
+    "react-search-input": "^0.11.3",
+    "react-toastify": "^9.1.1",
+    "react-transition-group": "^4.4.1",
+    "reactjs-localstorage": "^1.0.1",
     "reflect-metadata": "^0.2.2",
     "rimraf": "^3.0.2",
+    "rpg-awesome": "^0.2.0",
     "rxjs": "^7.8.0",
+    "sass-mq": "^6.0.0",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7",
-    "ts-morph": "^24.0.0",
-    "typeorm": "^0.3.11"
+    "styled-components": "^5.3.1",
+    "ts-morph": "24.0.0",
+    "typeorm": "^0.3.11",
+    "uuid": "^8.3.2",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/parser": "^7.24.1",
@@ -94,17 +118,25 @@
     "@types/jest": "^28.1.8",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/next": "^9.0.0",
+    "@types/node": "^22.7.6",
     "@types/passport": "^1.0.16",
     "@types/passport-google-oauth20": "^2.0.16",
-    "@types/node": "^22.7.6",
     "@types/passport-jwt": "^3.0.8",
     "@types/passport-local": "^1.0.34",
     "@types/passport-oauth2": "^1.4.11",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.0",
+    "@types/react-lazy-load-image-component": "^1.5.2",
+    "@types/react-router": "^5.1.17",
+    "@types/react-router-dom": "^5.3.3",
+    "@types/reactjs-localstorage": "^1.0.0",
+    "@types/styled-components": "^5.1.15",
     "@types/supertest": "^6.0.2",
+    "@types/yup": "^0.29.13",
     "@typescript-eslint/eslint-plugin": "^8.11.0",
     "@typescript-eslint/parser": "^8.11.0",
+    "autoprefixer": "^10.4.20",
+    "babel-plugin-styled-components": "^2.1.4",
     "connect": "^3.7.0",
     "cookiejar": "^2.1.4",
     "cypress": "^13.15.0",
@@ -118,9 +150,11 @@
     "jest": "^28.1.3",
     "json-schema": "^0.4.0",
     "mime": "^4.0.4",
+    "postcss": "^8.4.47",
     "prettier": "^3.3.3",
     "sass": "^1.79.5",
     "supertest": "^7.0.0",
+    "tailwindcss": "^3.4.14",
     "ts-jest": "^28.0.8",
     "ts-loader": "^9.4.2",
     "ts-node": "^10.9.1",
